# oitc-internship-2025

./: .env  .env.example  .env.legacy  .gitignore  README.md  anythingllm_query.py  development.md  docker-compose.legacy.yml  docker-compose.yml  requirements.txt  run.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  test.py  utils.py
backend/app/agent/: agent_langgraph.py  custom_agent_executor.py  models.py  routes.py  service.py  tools.py  utils.py
backend/app/api/v1/: api.py
backend/app/chat/: models.py  query_processor.py  rag_chain.py  rag_llm.py  routes.py  service.py
backend/app/embed/: clipembedder.py  models.py  nomic_embedder.py  routes.py  save_model.py  service.py
backend/app/exceptions/: errors.py
backend/app/health/: routes.py
backend/app/llm/: models.py  ollama.py  prompts.py  rag_services.py
backend/app/models/: chat.py  query_process.py  vectorstore.py
backend/app/mssql/: dependencies.py  example.py  models.py  routes.py  services.py  utils.py
backend/app/prompts/: prompts.py
backend/app/rag_system/: pipelines.py
backend/app/routers/: chat.py  embed.py  health.py  vectorstore.py
backend/app/services/: chat.py  custom_agent_executor.py  query_processor.py  rag_chain.py  rag_llm.py  utils.py  vectorstore.py
backend/app/services/embed/: clipembedder.py  embedder.py  (+1 more)
backend/app/vectorstore/: models.py  qdrant_vectorstore.py  routes.py  service.py
backend/tests/: test_health.py  test_mssql.py
backend/tests/e2e/: test_mssql_endpoints.py
backend/tests/services/: test_mssql.py
(+194 files in other folders)
